Fix: Backpack close z-indexing

--- a/src/components/compare/Compare.css
+++ b/src/components/compare/Compare.css
@@ -27,7 +27,7 @@
 .compare-labels {
   position: sticky;
   left: 0;
-  z-index: 10;
+  z-index: 5;
 }
 
 .compare-labels-item {
